# lograil

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/scripts/: test_installed_wheel.sh
.github/workflows/: publish.yml  test.yml
scripts/: poe.py  sync-githooks.py
scripts/githooks/: pre-push.checks.sh
src/lograil/: __init__.py
src/lograil/_internal/: __init__.py  async_tail.py  cli.py  console.py  formatter.py  lines.py  log.py  process.py  progress.py  registry.py  remap.py  tail.py
src/lograil/parsers/: __init__.py  _base.py  _builtins.py  generic.py  pytest.py
src/lograil/sources/: __init__.py  docker.py  fd.py  file.py  victoria.py
tests/: __init__.py  dashboard_demo.py  test_async_subprocess.py  test_cli.py  test_docker.py  test_e2e.py  test_env_filter.py  test_file_descriptor_source.py  test_file_plugin.py  test_lines.py  test_log_format.py  test_process_group.py  test_progress_lines.py  test_public_api.py  test_remap.py  test_status_behavior.py  test_tailing.py  test_victoria.py
